Replace usages of deprecated constructors